@@ -35,7 +35,6 @@ import sn.modelsis.signart.exception.SignArtException;
 import sn.modelsis.signart.facade.ImageMiniatureFacade;
 import sn.modelsis.signart.facade.OeuvreNumeriqueFacade;
 import static sn.modelsis.signart.service.ImageNumeriqueREST.encodeToString;
-import sun.misc.BASE64Encoder;
 
 
 /**
@@ -47,7 +46,8 @@ import sun.misc.BASE64Encoder;
 @Path("imageMiniature")
 public class ImageMiniatureREST {
 
-    public final static String PATH = "C:\\Users\\snmbengueo\\Documents\\SignartRepSave\\abonnement\\";
+    //public final static String PATH = "C:\\Users\\snmbengueo\\Documents\\SignartRepSave\\abonnement\\";
+    public final static String PATH = "/signartFiles/abonnement/";
 
     @Inject
     ImageMiniatureFacade imageMiniaturefacade;
@@ -73,7 +73,7 @@ public class ImageMiniatureREST {
         for(int i=0; i<oeuvre.size(); i++){
             ImageMiniature image = new ImageMiniature();
             String nom = oeuvre.get(i).getNom();
-            BufferedImage minImage = ImageIO.read(new File("/opt/images/min_"+nom+".jpg"));
+            BufferedImage minImage = ImageIO.read(new File(PATH+"images\\min_"+nom+".jpg"));
             byte[] minImageByte = toByteArray(minImage, "jpg");           
             image.setNomImage(nom);         
             image.setValeurImage(minImageByte);
@@ -155,8 +155,7 @@ public class ImageMiniatureREST {
         dto.setId(entity.getId());
         dto.setNomImage(entity.getNomImage());
          byte[] imageBytes = entity.getValeurImage();
-         BASE64Encoder encoder = new BASE64Encoder();
-         String imageString = encoder.encode(imageBytes);
+         String imageString = java.util.Base64.getEncoder().encodeToString(imageBytes);
         dto.setValeurImage(imageString);
         return dto;
     }
