@@ -53,7 +53,7 @@ import sn.modelsis.signart.facade.OeuvreNumeriqueFacade;
 import sn.modelsis.signart.facade.ImageNumeriqueFacade;
 
 
-import sun.misc.BASE64Encoder;
+import java.util.Base64.Decoder;
 /*import sn.modelsis.signart.Artiste;
 //import org.glassfish.jersey.media.multipart.FormDataParam;
 //import org.glassfish.jersey.media.multipart.FormDataParam;
@@ -77,9 +77,10 @@ public class ImageNumeriqueREST {
     ArtisteFacade artisteFacade;*/
    
     public final static String GOODPATH = "/opt/";
-    public final static String PATH = "C:\\Users\\snmbengueo\\Documents\\SignartRepSave\\abonnement\\";
+    //public final static String PATH = "C:\\Users\\snmbengueo\\Documents\\SignartRepSave\\abonnement\\";
     public final static String PATHTEST = "C:\\Users\\snfayemp\\Documents\\Projet\\Stockage\\";
-    
+    public final static String PATH = "/signartFiles/abonnement/";
+
     @Inject
     OeuvreNumeriqueFacade oeuvreNumeriqueFacade;
     
@@ -109,6 +110,9 @@ public class ImageNumeriqueREST {
         entity.setDescription(dto.getDescription());
         entity.setTechnique(dto.getTechnique());
         entity.setNom(nom);
+        entity.setDimensionLevel(dto.getDimensionLevel());
+        entity.setPoids(dto.getPoids());
+        entity.setNiveauPoids(dto.getNiveauPoids());
         return entity;
     }
     
@@ -126,6 +130,9 @@ public class ImageNumeriqueREST {
         dto.setDescription(entity.getDescription());
         dto.setTechnique(entity.getTechnique());
         dto.setNom(entity.getNom());
+        dto.setPoids(entity.getPoids());
+        dto.setDimensionLevel(entity.getDimensionLevel());
+        dto.setNiveauPoids(entity.getNiveauPoids());
         return dto;
     }
     
@@ -202,8 +209,7 @@ public class ImageNumeriqueREST {
             ImageIO.write(image, type, bos);
             byte[] imageBytes = bos.toByteArray();
 
-            BASE64Encoder encoder = new BASE64Encoder();
-            imageString = encoder.encode(imageBytes);
+            imageString = java.util.Base64.getEncoder().encodeToString(imageBytes);
 
             bos.close();
         } catch (IOException e) {
@@ -306,8 +312,7 @@ public class ImageNumeriqueREST {
         ImageMiniature imgMn = imageMiniaturefacade.findByName(imageName);
         //String imgStr = new String(imgMn.getValeurImage()); 
          byte[] imageBytes = imgMn.getValeurImage();
-         BASE64Encoder encoder = new BASE64Encoder();
-         String imageString = encoder.encode(imageBytes);
+         String imageString = java.util.Base64.getEncoder().encodeToString(imageBytes);
        // String imageBase64 = encodeToString(imgStr,"jpg");
        // System.out.println(imageBase64+"+++++++++++++++++++++++++++++++++++++++++++++imageBase64+++++++++++++++++++++++++++++++++++++");
         dtoImgB = entityToDtoOeuvre(oeuvreNumeriqueFacade.findByName(imageName));
@@ -332,8 +337,7 @@ public class ImageNumeriqueREST {
         //String imgStr = new String(imgMn.getValeurImage()); 
 
          byte[] imageBytes = imgMn.getValeurImage();
-         BASE64Encoder encoder = new BASE64Encoder();
-         String imageString = encoder.encode(imageBytes);
+         String imageString = java.util.Base64.getEncoder().encodeToString(imageBytes);
                // BufferedImage minImage = ImageIO.read(new File("/opt/images/"+imageName+".jpg"));
 
              //   System.out.println(minImage+"+++++++++++++++++++++++++++++++++++++++++++++minImage+++++++++++++++++++++++++++++++++++++");
@@ -368,8 +372,7 @@ public class ImageNumeriqueREST {
             //BufferedImage minImage = ImageIO.read(new File(PATH+"images/min_"+dtoImgB.get(j).getNom()+".jpg"));
             ImageMiniature imgMn = imageMiniaturefacade.findByName(dtoImgB.get(j).getNom());
              byte[] imageBytes = imgMn.getValeurImage();
-             BASE64Encoder encoder = new BASE64Encoder();
-             String imageString = encoder.encode(imageBytes);
+             String imageString = java.util.Base64.getEncoder().encodeToString(imageBytes);
            // String imgStr = new String(imgMn.getValeurImage());
             //System.out.println(dtoImgB.get(j).getNom()+"+++++++++++++++++++++++++++++++++++++++++++++nom+++++++++++++++++++++++++++++++++++++");
             
@@ -588,6 +591,8 @@ public class ImageNumeriqueREST {
         oeuvreNum.setDescription(dto.getDescription());
         oeuvreNum.setTechnique(dto.getTechnique());
         oeuvreNum.setNom(nom);
+        oeuvreNum.setNiveauPoids(dto.getNiveauPoids());
+        oeuvreNum.setDimensionLevel(dto.getDimensionLevel());
         return oeuvreNum;
     }
      
